Update carousel images and add .gitkeep for webfonts directory

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ function show_confirm(url){
        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4" class="active" aria-current="true"></button>
 </div>
     <div class="carousel-inner">
-           <div class="carousel-item" style="background-image: url(&#39;files/ducha-29782.jpg&#39;)">
+		   <div class="carousel-item" style="background-image: url('www.eitec.coop.ar_files/duchacate-98844.jpg')">
         <div class="container">
           <div class="carousel-caption">
             <h1>Termostato EITAR para termotanque a gas</h1>
@@ -335,7 +335,7 @@ function show_confirm(url){
           </div>
         </div>
       </div>
-           <div class="carousel-item" style="background-image: url(&#39;files/anafe-37591.jpg&#39;)">
+		   <div class="carousel-item" style="background-image: url('www.eitec.coop.ar_files/anafeimagen-95560.jpg')">
         <div class="container">
           <div class="carousel-caption">
             <h1>Quemadores para cocinas y anafes</h1>
@@ -345,7 +345,7 @@ function show_confirm(url){
           </div>
         </div>
       </div>
-           <div class="carousel-item" style="background-image: url(&#39;files/cocinahogar-79859.jpg&#39;)">
+		   <div class="carousel-item" style="background-image: url('www.eitec.coop.ar_files/cocinahogarcate-19596.jpg')">
         <div class="container">
           <div class="carousel-caption">
             <h1>Válvulas de seguridad para hornos y cocinas domésticas a gas</h1>
@@ -355,7 +355,7 @@ function show_confirm(url){
           </div>
         </div>
       </div>
-           <div class="carousel-item active" style="background-image: url(&#39;files/cocinaabstract-76049.jpg&#39;)">
+		   <div class="carousel-item active" style="background-image: url('www.eitec.coop.ar_files/cocinaabstract-68053.jpg')">
         <div class="container">
           <div class="carousel-caption">
             <h1>Robinetes. Robiválvulas para cocinas domésticas alimentadas a gas</h1>
