Fix file paths in index.html for consistency and correct loading of resources

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-<link href="./www.eitec.coop.ar_files/css2" rel="stylesheet">	
-<link href="./www.eitec.coop.ar_files/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<link href="./www.eitec.coop.ar/files/css2" rel="stylesheet">	
+<link href="./www.eitec.coop.ar/files/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <!--<script src="https://kit.fontawesome.com/9c9b6dc5ad.js" crossorigin="anonymous"></script>-->
-  <link href="./www.eitec.coop.ar_files/fontawesome.css" rel="stylesheet">
-	<link href="./www.eitec.coop.ar_files/brands.css" rel="stylesheet">
-<link href="./www.eitec.coop.ar_files/solid.css" rel="stylesheet">	
-<link href="./www.eitec.coop.ar_files/hamburgers.min.css" rel="stylesheet" type="text/css">
-<link href="./www.eitec.coop.ar_files/lg-transitions.min.css" rel="stylesheet" type="text/css">	
-<link href="./www.eitec.coop.ar_files/lightgallery.min.css" rel="stylesheet" type="text/css">	
-<link href="./www.eitec.coop.ar_files/styles.css" rel="stylesheet" type="text/css">	
-<link rel="stylesheet" href="./www.eitec.coop.ar_files/tiny-slider.css" integrity="sha512-eMxdaSf5XW3ZW1wZCrWItO2jZ7A9FhuZfjVdztr7ZsKNOmt6TUMTQgfpNoVRyfPE5S9BC0A4suXzsGSrAOWcoQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-<link href="./www.eitec.coop.ar_files/styles(1).css" rel="stylesheet" type="text/css">		
+  <link href="./www.eitec.coop.ar/files/fontawesome.css" rel="stylesheet">
+	<link href="./www.eitec.coop.ar/files/brands.css" rel="stylesheet">
+<link href="./www.eitec.coop.ar/files/solid.css" rel="stylesheet">	
+<link href="./www.eitec.coop.ar/files/hamburgers.min.css" rel="stylesheet" type="text/css">
+<link href="./www.eitec.coop.ar/files/lg-transitions.min.css" rel="stylesheet" type="text/css">	
+<link href="./www.eitec.coop.ar/files/lightgallery.min.css" rel="stylesheet" type="text/css">	
+<link href="./www.eitec.coop.ar/files/styles.css" rel="stylesheet" type="text/css">	
+<link rel="stylesheet" href="./www.eitec.coop.ar/files/tiny-slider.css" integrity="sha512-eMxdaSf5XW3ZW1wZCrWItO2jZ7A9FhuZfjVdztr7ZsKNOmt6TUMTQgfpNoVRyfPE5S9BC0A4suXzsGSrAOWcoQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
+<link href="./www.eitec.coop.ar/files/styles(1).css" rel="stylesheet" type="text/css">		
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" async="" charset="utf-8" src="./www.eitec.coop.ar_files/recaptcha__es.js.descarga" crossorigin="anonymous" integrity="sha384-ygz4vu13plqboxyFW9B3RdVA+1JQO7/sb1ymD04Tu7MoFFSXx1OXI2VLmvTT0WSe"></script><script type="text/javascript" async="" charset="utf-8" src="./www.eitec.coop.ar_files/recaptcha__es.js.descarga" crossorigin="anonymous" integrity="sha384-ygz4vu13plqboxyFW9B3RdVA+1JQO7/sb1ymD04Tu7MoFFSXx1OXI2VLmvTT0WSe"></script><script type="text/javascript">
+<script type="text/javascript" async="" charset="utf-8" src="./www.eitec.coop.ar/files/recaptcha__es.js.descarga" crossorigin="anonymous" integrity="sha384-ygz4vu13plqboxyFW9B3RdVA+1JQO7/sb1ymD04Tu7MoFFSXx1OXI2VLmvTT0WSe"></script><script type="text/javascript" async="" charset="utf-8" src="./www.eitec.coop.ar/files/recaptcha__es.js.descarga" crossorigin="anonymous" integrity="sha384-ygz4vu13plqboxyFW9B3RdVA+1JQO7/sb1ymD04Tu7MoFFSXx1OXI2VLmvTT0WSe"></script><script type="text/javascript">
 function ajax_update(accion,id,div_retorno){
 	var destino = '#'+div_retorno;
 	$.ajax({
@@ -217,9 +217,9 @@ function show_confirm(url){
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="https://default.contactopuro.com/img/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">	
-<script src="./www.eitec.coop.ar_files/jquery-3.6.0.min.js.descarga" crossorigin="anonymous"></script>	
+<script src="./www.eitec.coop.ar/files/jquery-3.6.0.min.js.descarga" crossorigin="anonymous"></script>	
 	
-<script src="./www.eitec.coop.ar_files/api.js.descarga"></script>
+<script src="./www.eitec.coop.ar/files/api.js.descarga"></script>
 	
 	
 		
@@ -325,7 +325,7 @@ function show_confirm(url){
        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4" class="active" aria-current="true"></button>
 </div>
     <div class="carousel-inner">
-		   <div class="carousel-item" style="background-image: url('www.eitec.coop.ar_files/duchacate-98844.jpg')">
+		   <div class="carousel-item" style="background-image: url('www.eitec.coop.ar/files/duchacate-98844.jpg')">
         <div class="container">
           <div class="carousel-caption">
             <h1>Termostato EITAR para termotanque a gas</h1>
@@ -335,7 +335,7 @@ function show_confirm(url){
           </div>
         </div>
       </div>
-		   <div class="carousel-item" style="background-image: url('www.eitec.coop.ar_files/anafeimagen-95560.jpg')">
+		   <div class="carousel-item" style="background-image: url('www.eitec.coop.ar/files/anafeimagen-95560.jpg')">
         <div class="container">
           <div class="carousel-caption">
             <h1>Quemadores para cocinas y anafes</h1>
@@ -345,7 +345,7 @@ function show_confirm(url){
           </div>
         </div>
       </div>
-		   <div class="carousel-item" style="background-image: url('www.eitec.coop.ar_files/cocinahogarcate-19596.jpg')">
+		   <div class="carousel-item" style="background-image: url('www.eitec.coop.ar/files/cocinahogarcate-19596.jpg')">
         <div class="container">
           <div class="carousel-caption">
             <h1>Válvulas de seguridad para hornos y cocinas domésticas a gas</h1>
@@ -355,7 +355,7 @@ function show_confirm(url){
           </div>
         </div>
       </div>
-		   <div class="carousel-item active" style="background-image: url('www.eitec.coop.ar_files/cocinaabstract-68053.jpg')">
+		   <div class="carousel-item active" style="background-image: url('www.eitec.coop.ar/files/cocinaabstract-68053.jpg')">
         <div class="container">
           <div class="carousel-caption">
             <h1>Robinetes. Robiválvulas para cocinas domésticas alimentadas a gas</h1>
@@ -383,61 +383,61 @@ function show_confirm(url){
 			
 				<a href="https://www.eitec.coop.ar/categoria-ensamblado-y-prueba-de-tubos-de-distribucion" class="cuadrada">
 					<p>Ensamblado y Prueba de Tubos de Distribución</p>
-					<img src="./www.eitec.coop.ar_files/ensambladoytubosdedistribucion-97545-12556.png" alt="" class="centrar imagenCategoria">
+					<img src="./www.eitec.coop.ar/files/ensambladoytubosdedistribucion-97545-12556.png" alt="" class="centrar imagenCategoria">
 
 				</a>
 			
 				<a href="https://www.eitec.coop.ar/categoria-pilotos" class="cuadrada">
 					<p>Pilotos</p>
-					<img src="./www.eitec.coop.ar_files/pilotos-46904.jpeg" alt="" class="centrar imagenCategoria">
+					<img src="./www.eitec.coop.ar/files/pilotos-46904.jpeg" alt="" class="centrar imagenCategoria">
 
 				</a>
 			
 				<a href="https://www.eitec.coop.ar/categoria-quemadores-para-cocinas-y-anafes" class="cuadrada">
 					<p>Quemadores para cocinas y anafes</p>
-					<img src="./www.eitec.coop.ar_files/anafeimagen-95560.jpg" alt="" class="centrar imagenCategoria">
+					<img src="./www.eitec.coop.ar/files/anafeimagen-95560.jpg" alt="" class="centrar imagenCategoria">
 
 				</a>
 			
 				<a href="https://www.eitec.coop.ar/categoria-robinetes-y-valvulas-de-seguridad-a-gas-para-cocinas-gastronomicas" class="cuadrada">
 					<p>Robinetes y válvulas de seguridad a gas para cocinas gastronómicas</p>
-					<img src="./www.eitec.coop.ar_files/cocinaindustrialcate-43965.jpg" alt="" class="centrar imagenCategoria">
+					<img src="./www.eitec.coop.ar/files/cocinaindustrialcate-43965.jpg" alt="" class="centrar imagenCategoria">
 
 				</a>
 			
 				<a href="https://www.eitec.coop.ar/categoria-robinetes-robivalvulas-para-cocinas-domesticas-alimentadas-a-gas" class="cuadrada">
 					<p>Robinetes. Robiválvulas para cocinas domésticas alimentadas a gas</p>
-					<img src="./www.eitec.coop.ar_files/cocinaabstract-68053.jpg" alt="" class="centrar imagenCategoria">
+					<img src="./www.eitec.coop.ar/files/cocinaabstract-68053.jpg" alt="" class="centrar imagenCategoria">
 
 				</a>
 			
 				<a href="https://www.eitec.coop.ar/categoria-termostato-eitar-para-termotanque-a-gas" class="cuadrada">
 					<p>Termostato EITAR para termotanque a gas</p>
-					<img src="./www.eitec.coop.ar_files/duchacate-98844.jpg" alt="" class="centrar imagenCategoria">
+					<img src="./www.eitec.coop.ar/files/duchacate-98844.jpg" alt="" class="centrar imagenCategoria">
 
 				</a>
 			
 				<a href="https://www.eitec.coop.ar/categoria-termostatos-con-seguridad-termoelectrica-para-calentadores-de-agua-a-gas" class="cuadrada">
 					<p>Termostatos con seguridad termoeléctrica para calentadores de agua a gas</p>
-					<img src="./www.eitec.coop.ar_files/temostatotermoelectricocalentadoresde-78210.png" alt="" class="centrar imagenCategoria">
+					<img src="./www.eitec.coop.ar/files/temostatotermoelectricocalentadoresde-78210.png" alt="" class="centrar imagenCategoria">
 
 				</a>
 			
 				<a href="https://www.eitec.coop.ar/categoria-valvulas-de-seguridad-a-gas-para-calefactores" class="cuadrada">
 					<p>Válvulas de Seguridad a gas para Calefactores</p>
-					<img src="./www.eitec.coop.ar_files/calefaccionserie900-52766-83863.png" alt="" class="centrar imagenCategoria">
+					<img src="./www.eitec.coop.ar/files/calefaccionserie900-52766-83863.png" alt="" class="centrar imagenCategoria">
 
 				</a>
 			
 				<a href="https://www.eitec.coop.ar/categoria-valvulas-de-seguridad-para-hornos-y-cocinas-domesticas-a-gas" class="cuadrada">
 					<p>Válvulas de seguridad para hornos y cocinas domésticas a gas</p>
-					<img src="./www.eitec.coop.ar_files/cocinahogarcate-19596.jpg" alt="" class="centrar imagenCategoria">
+					<img src="./www.eitec.coop.ar/files/cocinahogarcate-19596.jpg" alt="" class="centrar imagenCategoria">
 
 				</a>
 			
 				<a href="https://www.eitec.coop.ar/categoria-valvulas-de-seguridad-termoelectrica" class="cuadrada">
 					<p>Válvulas de seguridad termoeléctrica</p>
-					<img src="./www.eitec.coop.ar_files/duccha-40246.jpg" alt="" class="centrar imagenCategoria">
+					<img src="./www.eitec.coop.ar/files/duccha-40246.jpg" alt="" class="centrar imagenCategoria">
 
 				</a>
 							<span class="clearfix"></span>
@@ -446,7 +446,7 @@ function show_confirm(url){
 	</section>
 
 	<section class="contacto" id="contacto">
-<script src="./www.eitec.coop.ar_files/api.js.descarga" async="" defer=""></script>	
+<script src="./www.eitec.coop.ar/files/api.js.descarga" async="" defer=""></script>	
 	<div class="container">
 		
 				<h2>Contactanos</h2>
@@ -479,7 +479,7 @@ function show_confirm(url){
 
 				<div class="form-floating col-12">
 
-					<div><div class="grecaptcha-badge" data-style="bottomright" style="width: 256px; height: 60px; display: block; transition: right 0.3s; position: fixed; bottom: 14px; right: -186px; box-shadow: gray 0px 0px 5px; border-radius: 2px; overflow: hidden;"><div class="grecaptcha-logo"><iframe title="reCAPTCHA" width="256" height="60" role="presentation" name="a-vl2qkt1pm088" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox allow-storage-access-by-user-activation" src="./www.eitec.coop.ar_files/anchor.html"></iframe></div><div class="grecaptcha-error"></div><textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response" style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea></div><iframe style="display: none;" src="./www.eitec.coop.ar_files/saved_resource(1).html"></iframe></div><button data-sitekey="6LcPPAwqAAAAAIBCVGMVKP-y6RIyHHN0SKqmEpg_" data-callback="onSubmit_contactanos" data-action="submit" id="boton_enviar" class="g-recaptcha btn btn-primary btn-call col-12 col-md-3">Enviar</button>
+					<div><div class="grecaptcha-badge" data-style="bottomright" style="width: 256px; height: 60px; display: block; transition: right 0.3s; position: fixed; bottom: 14px; right: -186px; box-shadow: gray 0px 0px 5px; border-radius: 2px; overflow: hidden;"><div class="grecaptcha-logo"><iframe title="reCAPTCHA" width="256" height="60" role="presentation" name="a-vl2qkt1pm088" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox allow-storage-access-by-user-activation" src="./www.eitec.coop.ar/files/anchor.html"></iframe></div><div class="grecaptcha-error"></div><textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response" style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea></div><iframe style="display: none;" src="./www.eitec.coop.ar/files/saved_resource(1).html"></iframe></div><button data-sitekey="6LcPPAwqAAAAAIBCVGMVKP-y6RIyHHN0SKqmEpg_" data-callback="onSubmit_contactanos" data-action="submit" id="boton_enviar" class="g-recaptcha btn btn-primary btn-call col-12 col-md-3">Enviar</button>
 				
 				</div>
 			</form>
@@ -541,11 +541,11 @@ function show_confirm(url){
 </div>
 	
 	
-<script src="./www.eitec.coop.ar_files/jquery-3.6.0.min.js.descarga" crossorigin="anonymous"></script>	
-<script src="./www.eitec.coop.ar_files/bootstrap.bundle.min.js.descarga" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+<script src="./www.eitec.coop.ar/files/jquery-3.6.0.min.js.descarga" crossorigin="anonymous"></script>	
+<script src="./www.eitec.coop.ar/files/bootstrap.bundle.min.js.descarga" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
 <!--Elementos en una fila con la misma altura-->
-<script src="./www.eitec.coop.ar_files/jquery.matchHeight-min.js.descarga"></script>
+<script src="./www.eitec.coop.ar/files/jquery.matchHeight-min.js.descarga"></script>
 <script>
     $(function() {
 	$('.match').matchHeight({
@@ -690,11 +690,11 @@ function show_confirm(url){
 	
 </script>	
 
-<script src="./www.eitec.coop.ar_files/lightgallery.min.js.descarga" integrity="sha512-VB3GiFI9lfNdi8cZcBEp9IZ094RWXSuypW48AeNZ6XENypTL+secxWEeXpoItYF+F+i8/17KhdUUMYlIYXRTaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="./www.eitec.coop.ar/files/lightgallery.min.js.descarga" integrity="sha512-VB3GiFI9lfNdi8cZcBEp9IZ094RWXSuypW48AeNZ6XENypTL+secxWEeXpoItYF+F+i8/17KhdUUMYlIYXRTaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!-- A jQuery plugin that adds cross-browser mouse wheel support. (Optional) -->
-<script src="./www.eitec.coop.ar_files/jquery.mousewheel.min.js.descarga" integrity="sha512-rCjfoab9CVKOH/w/T6GbBxnAH5Azhy4+q1EXW5XEURefHbIkRbQ++ZR+GBClo3/d3q583X/gO4FKmOFuhkKrdA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="./www.eitec.coop.ar/files/jquery.mousewheel.min.js.descarga" integrity="sha512-rCjfoab9CVKOH/w/T6GbBxnAH5Azhy4+q1EXW5XEURefHbIkRbQ++ZR+GBClo3/d3q583X/gO4FKmOFuhkKrdA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!-- lightgallery plugins -->
-<script src="./www.eitec.coop.ar_files/lg-fullscreen.min.js.descarga" integrity="sha512-GvMYZx1AUxtd+OYSc33H9DYX9qeT/OY90+O8kJ65cLXvSelNSgeytaxDV8bY58TeoZxz1HiqgAfpchczH7S8qA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  
+<script src="./www.eitec.coop.ar/files/lg-fullscreen.min.js.descarga" integrity="sha512-GvMYZx1AUxtd+OYSc33H9DYX9qeT/OY90+O8kJ65cLXvSelNSgeytaxDV8bY58TeoZxz1HiqgAfpchczH7S8qA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  
 	
 <script type="text/javascript">
     $(document).ready(function() {
@@ -704,7 +704,7 @@ function show_confirm(url){
 </script>	
 
 <!--Testimoniales-->
-<script src="./www.eitec.coop.ar_files/tiny-slider.js.descarga"></script>
+<script src="./www.eitec.coop.ar/files/tiny-slider.js.descarga"></script>
 
 <script>
   var slider = tns({
